--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,35 @@
     "type": "symfony-bundle",
     "license": "MIT",
     "minimum-stability": "stable",
-    "require": {}
+    "homepage": "https://ro-cloud.eu/",
+    "authors": [
+        {
+            "name": "Black-Nobody",
+            "email": "black-nobody@hotmail.de",
+            "homepage": "https://ro-cloud.eu/"
+        }
+    ],
+    "require": {
+        "php": "^7.2",
+        "friendsofsymfony/user-bundle": "^2.1",
+        "symfony/http-kernel": "^3.0 || ^4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.1"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "RoCloud\\UserBundle": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "RoCloud\\UserBundle\\Tests": "tests/"
+        }
+    }
 }
