--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": "^7.2",
         "friendsofsymfony/user-bundle": "^2.1",
         "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/orm": "^2.6",
         "symfony/http-kernel": "^3.0 || ^4.0",
         "symfony/console": "^3.0 || ^4.0"
     },
@@ -33,7 +34,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "dev-feature/fos-userbundle-implementation"
+            "dev-master": "0.x-dev"
         }
     }
 }
