--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "doctrine/doctrine-bundle": "^1.9",
         "doctrine/orm": "^2.6",
         "symfony/http-kernel": "^3.0 || ^4.0",
-        "symfony/console": "^3.0 || ^4.0"
+        "symfony/console": "^3.0 || ^4.0",
+        "symfony/form": "^3.0 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1"
