--- a/src/Resources/config/commands.yml
+++ b/src/Resources/config/commands.yml
@@ -5,5 +5,6 @@ services:
             - ~
             - '@doctrine.orm.entity_manager'
             - '@rocloud.account_manager'
+            - '@fos_user.user_manager.default'
         tags:
             - { name: 'console.command', command: 'ro:create-user'}
