Add gender to create-account-command - Fixed also a bug with autowiring and type-hinting a service

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -10,3 +10,5 @@ services:
         arguments:
             - '@rocloud.md5_encoder'
             - "@=service('doctrine.orm.entity_manager').getRepository('RoCloudUserBundle:IngameAccount')"
+
+    RoCloud\UserBundle\Entity\Manager\AccountManagerInterface: '@rocloud.account_manager'
